trying to solve a bug when using on iphone

--- a/src/css/About.css
+++ b/src/css/About.css
@@ -99,5 +99,7 @@
 
   .about-img > img {
     width: 100%;
+    height: 30%;
+    margin: auto;
   }
 }
